--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -11,6 +11,9 @@
   display: flex;
   justify-content: flex-start;
   margin-left: 20px;
+  /* make small margin on bottom because sometimes react
+  custom scrollbar cuts off a pixel or 2 at the bottom */
+  margin-bottom: 2px;
   max-height: 85%;
 
   animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
