--- a/src/components/Dashboard/DashboardTile.css
+++ b/src/components/Dashboard/DashboardTile.css
@@ -16,6 +16,8 @@
 
 .chata-dashboard-tile-inner-div {
   height: 100%;
+  width: 100%;
+  position: relative;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -23,8 +25,53 @@
   align-items: center;
 }
 
+.chata-dashboard-tile-inner-div .single-value-response {
+  font-size: 23px;
+}
+
+.chata-dashboard-tile-inner-div .dashboard-tile-response-container {
+  height: 100%;
+  width: 100%;
+  padding: 30px;
+  padding-top: 18px;
+}
+
+.dashboard-tile-title-container {
+  /* color: #6d6d6d; */
+  width: 100%;
+  text-align: left;
+  padding: 20px 30px 0 30px;
+  height: 55px;
+  font-weight: bold;
+  font-size: 17px;
+  padding-bottom: 0;
+  /* text-transform: uppercase; */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex-shrink: 0;
+  flex-grow: 0;
+}
+
+.dashboard-tile-loading-container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.dashboard-tile-title-divider {
+  height: 2px;
+  background: currentColor;
+  width: 75px;
+  margin-top: 8px;
+  opacity: 0.07;
+}
+
 .chata-dashboard-tile-drag-handle {
   height: 20px;
+  width: 100%;
   background: transparent;
   cursor: move;
 }
@@ -34,6 +81,11 @@
 .react-draggable-transparent-selection div::selection,
 .react-draggable-transparent-selection a::selection,
 .react-draggable-transparent-selection input::selection,
+.react-draggable-transparent-selection text::selection,
 .react-draggable-transparent-selection input::placeholder {
   color: inherit;
+}
+
+.react-grid-item > .react-resizable-handle {
+  z-index: 1;
 }
