change tile text color to blue

--- a/src/components/Dashboard/DashboardTile.css
+++ b/src/components/Dashboard/DashboardTile.css
@@ -37,7 +37,7 @@
 }
 
 .dashboard-tile-title-container {
-  /* color: #6d6d6d; */
+  color: #356f90;
   width: 100%;
   text-align: left;
   padding: 20px 30px 0 30px;
