--- a/src/components/Dashboard/DashboardTile.css
+++ b/src/components/Dashboard/DashboardTile.css
@@ -7,11 +7,10 @@
   color: rgb(64, 64, 64);
 
   border-radius: 4px;
-  /* border: 1px solid rgba(0, 0, 0, 0.13); */
-  /* border: 1px solid transparent; */
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.13);
-
-  transition: border 0.2s ease-in;
+}
+.chata-dashboard .react-grid-item:not(.dragging) {
+  transition: all 0.2s ease-in;
 }
 
 .chata-dashboard-tile-inner-div {
@@ -29,28 +28,97 @@
   font-size: 23px;
 }
 
-.chata-dashboard-tile-inner-div .dashboard-tile-response-container {
+.chata-dashboard-tile-inner-div .dashboard-tile-response-wrapper {
   height: 100%;
   width: 100%;
   padding: 30px;
-  padding-top: 18px;
+  padding-top: 0;
+}
+.chata-dashboard-tile-inner-div .dashboard-tile-response-wrapper.editing {
+  cursor: move;
+}
+.dashboard-tile-response-wrapper .dashboard-tile-response-container {
+  height: 100%;
+  width: 100%;
+  padding-top: 21px;
+  cursor: default;
 }
 
 .dashboard-tile-title-container {
-  color: #356f90;
   width: 100%;
   text-align: left;
   padding: 20px 30px 0 30px;
   height: 55px;
-  font-weight: bold;
-  font-size: 17px;
-  padding-bottom: 0;
-  /* text-transform: uppercase; */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   flex-shrink: 0;
   flex-grow: 0;
+}
+
+.dashboard-tile-title-container .dashboard-tile-title {
+  color: #356f90;
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.dashboard-tile-edit-wrapper {
+  width: 100%;
+  height: 55px;
+  padding: 20px 30px 0 30px;
+  flex-shrink: 0;
+  flex-grow: 0;
+  cursor: move;
+}
+
+.dashboard-tile-input-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.dashboard-tile-input-container .dashboard-tile-input {
+  width: 0;
+  padding: 12px;
+  border: 1px solid rgb(0, 0, 0, 0.1);
+  outline: none !important;
+  color: #356f90;
+
+  flex-grow: 1;
+  transition: width 0.6s ease;
+}
+.dashboard-tile-input-container .dashboard-tile-input:hover,
+.dashboard-tile-input-container .dashboard-tile-input:focus {
+  width: 80%;
+}
+.dashboard-tile-input-container .dashboard-tile-input:focus {
+  border: 1px solid rgb(38, 167, 233) !important;
+}
+.dashboard-tile-input-container .dashboard-tile-input.query {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.dashboard-tile-input-container .dashboard-tile-input.title {
+  border-left: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.dashboard-tile-input-container .dashboard-tile-input.title:focus {
+  /* This is done to balance it because we add a 1px left border when the input is focused */
+  margin-left: -1px;
+}
+
+.dashboard-tile-delete-button {
+  opacity: 0;
+  color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 2px;
+  right: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.react-grid-item:hover .dashboard-tile-delete-button {
+  opacity: 1;
 }
 
 .dashboard-tile-loading-container {
@@ -76,6 +144,49 @@
   cursor: move;
 }
 
+/* Dragging placeholder styles */
+.chata-db-dragging-placeholder-container {
+  height: 100%;
+  width: 100%;
+  padding: 20px 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.chata-db-dragging-placeholder-title {
+  width: 100%;
+  height: 35px;
+  background: #f3f3f3;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  flex-shrink: 0;
+  flex-grow: 0;
+}
+
+.chata-db-dragging-placeholder-content {
+  width: 100%;
+  height: 100%;
+  background: #f9f9f9;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+/* React Grid Layout overrides */
+.react-grid-item > .react-resizable-handle {
+  z-index: 1;
+}
+.react-grid-item > .react-resizable-handle::after {
+  width: 8px;
+  height: 8px;
+  opacity: 0;
+  border-right: 1px solid rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  transition: opacity 0.3s ease;
+}
+
+.react-grid-item:hover > .react-resizable-handle::after {
+  opacity: 1;
+}
 /* This fixes the flickering bug in RGL when resizing elements */
 .react-draggable-transparent-selection span::selection,
 .react-draggable-transparent-selection div::selection,
@@ -84,8 +195,4 @@
 .react-draggable-transparent-selection text::selection,
 .react-draggable-transparent-selection input::placeholder {
   color: inherit;
-}
-
-.react-grid-item > .react-resizable-handle {
-  z-index: 1;
 }
