--- a/src/components/Dashboard/DashboardTile.css
+++ b/src/components/Dashboard/DashboardTile.css
@@ -10,7 +10,7 @@
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.13);
 }
 .chata-dashboard .react-grid-item:not(.dragging) {
-  transition: all 0.2s ease-in;
+  /* transition: all 0.2s ease-in; */
 }
 
 .chata-dashboard-tile-inner-div {
@@ -63,49 +63,33 @@
 }
 
 .dashboard-tile-edit-wrapper {
+  display: flex;
   width: 100%;
   height: 55px;
-  padding: 20px 30px 0 30px;
+  padding: 20px 23px 0 30px;
   flex-shrink: 0;
   flex-grow: 0;
   cursor: move;
 }
 
-.dashboard-tile-input-container {
-  display: flex;
-  width: 100%;
-  height: 100%;
+.dashboard-tile-play-button {
+  cursor: default;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
-
-.dashboard-tile-input-container .dashboard-tile-input {
-  width: 0;
-  padding: 12px;
-  border: 1px solid rgb(0, 0, 0, 0.1);
-  outline: none !important;
-  color: #356f90;
-
-  flex-grow: 1;
-  transition: width 0.6s ease;
+.dashboard-tile-play-button svg {
+  cursor: pointer;
+  width: 20px;
+  height: 33px;
+  margin-left: 10px;
+  color: #366f90;
 }
-.dashboard-tile-input-container .dashboard-tile-input:hover,
-.dashboard-tile-input-container .dashboard-tile-input:focus {
-  width: 80%;
+.dashboard-tile-play-button.disabled svg {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
-.dashboard-tile-input-container .dashboard-tile-input:focus {
-  border: 1px solid rgb(38, 167, 233) !important;
-}
-.dashboard-tile-input-container .dashboard-tile-input.query {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-.dashboard-tile-input-container .dashboard-tile-input.title {
-  border-left: none;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.dashboard-tile-input-container .dashboard-tile-input.title:focus {
-  /* This is done to balance it because we add a 1px left border when the input is focused */
-  margin-left: -1px;
+.dashboard-tile-play-button:not(.disabled) svg:hover {
+  opacity: 0.8;
 }
 
 .dashboard-tile-delete-button {
@@ -115,7 +99,7 @@
   top: 2px;
   right: 4px;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: opacity 0.3s ease;
 }
 .react-grid-item:hover .dashboard-tile-delete-button {
   opacity: 1;
@@ -137,11 +121,42 @@
   opacity: 0.07;
 }
 
-.chata-dashboard-tile-drag-handle {
-  height: 20px;
+/* Input box styling for edit mode */
+.dashboard-tile-input-container {
+  display: flex;
   width: 100%;
-  background: transparent;
-  cursor: move;
+  height: 100%;
+}
+.dashboard-tile-input-container .dashboard-tile-input {
+  width: 0;
+  padding: 12px;
+  border: 1px solid rgb(0, 0, 0, 0.1);
+  outline: none !important;
+  color: #356f90;
+
+  flex-grow: 1;
+  transition: width 0.3s ease;
+}
+.dashboard-tile-input-container .dashboard-tile-input:focus {
+  width: 80%;
+}
+.dashboard-tile-input-container .dashboard-tile-input:hover,
+.dashboard-tile-input-container .dashboard-tile-input:focus {
+  border: 1px solid rgb(38, 167, 233) !important;
+}
+.dashboard-tile-input-container .dashboard-tile-input.query {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.dashboard-tile-input-container .dashboard-tile-input.title {
+  border-left: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.dashboard-tile-input-container .dashboard-tile-input.title:hover,
+.dashboard-tile-input-container .dashboard-tile-input.title:focus {
+  /* This is done to balance it because we add a 1px left border when the input is focused or hovered */
+  margin-left: -1px;
 }
 
 /* Dragging placeholder styles */
@@ -169,6 +184,10 @@
   background: #f9f9f9;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
+}
+
+.dashboard-tile-placeholder-text {
+  color: rgba(0, 0, 0, 0.3);
 }
 
 /* React Grid Layout overrides */
