--- a/examples/cra/src/index.css
+++ b/examples/cra/src/index.css
@@ -13,3 +13,11 @@
 .test-page-container input {
   max-width: 200px;
 }
+
+.spira-ui-overlay {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(/static/media/spira_ui.7d6c51fd.png);
+}
