--- a/src/components/Dashboard/DashboardTile.css
+++ b/src/components/Dashboard/DashboardTile.css
@@ -49,6 +49,7 @@
   white-space: nowrap;
 }
 .dashboard-tile-response-wrapper.small .chata-safety-net-description,
+.dashboard-tile-response-wrapper.small .chata-suggestion-message-description,
 .dashboard-tile-response-wrapper .chata-safety-net-execute-btn {
   display: none;
 }
