change default font to sans-serif

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,5 +1,5 @@
 .chata-drawer-tooltip {
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   letter-spacing: 0.04em;
   padding: 7px 15px;
   transition: none;
