--- a/src/components/SpeechToTextButton/SpeechToTextButton.css
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.css
@@ -29,7 +29,7 @@
   vertical-align: top;
 }
 .chata-tooltip {
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   letter-spacing: 0.04em;
   padding: 7px 15px;
   opacity: 1 !important;
