--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -14,7 +14,7 @@
   box-sizing: border-box;
   border-radius: 24px;
   font-size: 16px;
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   letter-spacing: 0.04em;
   outline: none !important;
   width: calc(100% - 20px);
@@ -64,7 +64,7 @@
   width: calc(100% - 20px);
   height: unset;
   border-radius: 24px;
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   font-size: 15px;
   font-weight: normal;
   z-index: 2;
