--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Titillium+Web:100,200,300,400,500,600,700,800,900");
 
 .chata-drawer {
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
 }
 
 .chata-drawer-content-container {
@@ -110,7 +110,7 @@
   height: 35px;
 }
 .chata-drawer-tooltip {
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   letter-spacing: 0.04em;
   padding: 7px 15px;
   transition: none;
@@ -118,7 +118,7 @@
   z-index: 99999; /* necessary to show up on top of rc drawer */
 }
 .interpretation-tooltip {
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   text-align: left;
   letter-spacing: 0.04em;
   padding: 7px 15px;
