--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -31,7 +31,7 @@
   border-radius: 10px;
   max-width: calc(100% - 20px);
   word-wrap: break-word;
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   font-size: 14px;
   letter-spacing: 0.04em;
 }
