--- a/src/components/ResponseRenderer/ResponseRenderer.css
+++ b/src/components/ResponseRenderer/ResponseRenderer.css
@@ -17,7 +17,7 @@
   padding: 6px 14px;
   background: transparent;
   border-radius: 8px;
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   font-size: 12px;
   margin-top: 5px;
   outline: none !important;
@@ -37,7 +37,7 @@
   padding: 6px 14px;
   background: transparent;
   border-radius: 5px;
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   font-size: 12px;
   margin-top: 5px;
   outline: none !important;
@@ -69,7 +69,7 @@
   background: none;
   outline: none !important;
   border: 1px solid;
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   letter-spacing: 0.05em;
   color: #28a8e0;
   cursor: pointer;
@@ -112,7 +112,7 @@
   background: none;
   outline: none !important;
   border: none;
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   letter-spacing: 0.05em;
 
   /* Default style outside of drawer */
@@ -125,7 +125,7 @@
   margin-bottom: -2px;
 }
 .chata-chart-tooltip {
-  font-family: "Titillium Web", sans-serif;
+  font-family: sans-serif;
   letter-spacing: 0.04em;
   padding: 7px 15px;
   transition: all 0.2s ease;
