--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Titillium+Web:100,200,300,400,500,600,700,800,900");
-
 .chata-bar-container {
   position: relative;
   display: flex;
@@ -14,11 +12,12 @@
   box-sizing: border-box;
   border-radius: 24px;
   font-size: 16px;
-  font-family: sans-serif;
+  font-family: inherit;
   letter-spacing: 0.04em;
   outline: none !important;
   width: calc(100% - 20px);
   background: transparent;
+  font-family: inherit;
 
   /* Default styles outside of chat drawer */
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -64,7 +63,7 @@
   width: calc(100% - 20px);
   height: unset;
   border-radius: 24px;
-  font-family: sans-serif;
+  font-family: inherit;
   font-size: 15px;
   font-weight: normal;
   z-index: 2;
