--- a/src/components/ResponseRenderer/ResponseRenderer.css
+++ b/src/components/ResponseRenderer/ResponseRenderer.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Titillium+Web:100,200,300,400,500,600,700,800,900");
-
 .chata-response-content-container {
   display: flex;
   justify-content: center;
@@ -17,7 +15,7 @@
   padding: 6px 14px;
   background: transparent;
   border-radius: 8px;
-  font-family: sans-serif;
+  font-family: inherit;
   font-size: 12px;
   margin-top: 5px;
   outline: none !important;
@@ -37,7 +35,7 @@
   padding: 6px 14px;
   background: transparent;
   border-radius: 5px;
-  font-family: sans-serif;
+  font-family: inherit;
   font-size: 12px;
   margin-top: 5px;
   outline: none !important;
@@ -69,7 +67,7 @@
   background: none;
   outline: none !important;
   border: 1px solid;
-  font-family: sans-serif;
+  font-family: inherit;
   letter-spacing: 0.05em;
   color: #28a8e0;
   cursor: pointer;
@@ -112,8 +110,8 @@
   background: none;
   outline: none !important;
   border: none;
-  font-family: sans-serif;
   letter-spacing: 0.05em;
+  font-family: inherit;
 
   /* Default style outside of drawer */
   color: #28a8e0;
@@ -125,7 +123,7 @@
   margin-bottom: -2px;
 }
 .chata-chart-tooltip {
-  font-family: sans-serif;
+  font-family: inherit;
   letter-spacing: 0.04em;
   padding: 7px 15px;
   transition: all 0.2s ease;
