add stacked bar and stacked column charts add error catch HOC to chart component

--- a/src/components/Dashboard/DashboardTile.css
+++ b/src/components/Dashboard/DashboardTile.css
@@ -32,6 +32,7 @@
 .chata-dashboard-tile-inner-div {
   height: 100%;
   width: 100%;
+  background: inherit;
   position: relative;
   text-align: center;
   display: flex;
@@ -47,6 +48,7 @@
 .chata-dashboard-tile-inner-div .dashboard-tile-response-wrapper {
   height: 100%;
   width: 100%;
+  /* padding: 20px; */
   padding: 30px;
   padding-top: 0;
 }
