--- a/src/components/Dashboard/DashboardTile.css
+++ b/src/components/Dashboard/DashboardTile.css
@@ -9,6 +9,7 @@
   background: #fff;
   color: rgb(64, 64, 64);
   font-family: var(--chata-dashboard-font-family), sans-serif;
+  overflow: hidden;
 
   border-radius: 4px;
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.13);
