--- a/src/components/ResponseRenderer/ResponseRenderer.css
+++ b/src/components/ResponseRenderer/ResponseRenderer.css
@@ -1,5 +1,6 @@
 .chata-response-content-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: inherit;
