add number filters and fix some css bugs

--- a/src/components/ChatBar/ChatBar.css
+++ b/src/components/ChatBar/ChatBar.css
@@ -98,6 +98,7 @@
   padding: 2px;
   padding-left: 18px;
   letter-spacing: 0.05em;
+  line-height: 22.5px;
   /* color: var(--chata-drawer-text-color-primary); */
 }
 
