--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -1,9 +1,10 @@
 .chata-drawer {
   /* font-family: sans-serif; */
   font-family: var(--chata-drawer-font-family), sans-serif;
+  line-height: 22px;
 }
 
-.chata-drawer-content-container {
+.chata-drawer .chata-drawer-content-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -12,7 +13,7 @@
   justify-content: stretch;
 }
 
-.chat-header-container {
+.chata-drawer .chat-header-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -23,12 +24,12 @@
   flex-shrink: 0;
   z-index: 1;
 }
-.chata-header-right-container {
+.chata-drawer .chata-header-right-container {
   display: flex;
   justify-content: right;
   width: 100px;
 }
-.chata-header-center-container {
+.chata-drawer .chata-header-center-container {
   position: relative;
   color: #fff;
   line-height: 60px;
@@ -39,25 +40,26 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.chata-header-left-container {
+.chata-drawer .chata-header-left-container {
   width: 100px;
 }
-.chata-button.close svg {
+.chata-drawer .chata-button.close svg {
   width: 30px;
   height: 30px;
   padding-top: 3px;
 }
-.chata-button.clear-all {
+.chata-drawer .chata-button.clear-all {
   position: absolute;
   right: 10px;
 }
-.chata-button.clear-all svg {
+.chata-drawer .chata-button.clear-all svg {
   width: 26px;
   height: 26px;
   padding-top: 8px;
+  box-sizing: border-box;
 }
 
-.chat-message-container {
+.chata-drawer .chat-message-container {
   scroll-behavior: smooth !important;
   max-height: calc(100% - 140px);
   overflow-y: auto;
@@ -66,19 +68,19 @@
   flex: 1;
 }
 
-.chat-bar-container {
+.chata-drawer .chat-bar-container {
   position: relative;
   padding: 10px;
   padding-top: 30px;
 }
 
-.chat-drawer-chat-bar {
+.chata-drawer .chat-drawer-chat-bar {
   flex-shrink: 0;
   flex-grow: 0;
   height: 60px;
 }
 
-.watermark {
+.chata-drawer .watermark {
   position: absolute;
   color: var(--chata-drawer-text-color-primary);
   text-align: center;
@@ -88,11 +90,11 @@
   font-size: 13px;
 }
 
-.chata-drawer:focus {
+.chata-drawer .chata-drawer:focus {
   outline: none;
 }
 
-.chat-header-container button {
+.chata-drawer .chat-header-container button {
   background: transparent;
   border: none;
   color: white;
@@ -102,74 +104,52 @@
   cursor: pointer;
   outline: none !important;
 }
-.chat-header-container button:hover {
+.chata-drawer .chat-header-container button:hover {
   opacity: 0.7;
 }
-.chat-header-container button svg {
+.chata-drawer .chat-header-container button svg {
   width: 35px;
   height: 35px;
 }
-.chata-drawer-tooltip {
-  /* font-family: sans-serif; */
-  font-family: var(--chata-drawer-font-family), sans-serif;
-  font-family: inherit;
-  letter-spacing: 0.04em;
-  padding: 7px 15px;
-  transition: none;
-  opacity: 1 !important;
-  z-index: 99999; /* necessary to show up on top of rc drawer */
-}
-.interpretation-tooltip {
-  /* font-family: sans-serif; */
-  font-family: var(--chata-drawer-font-family), sans-serif;
-  font-family: inherit;
-  text-align: left;
-  letter-spacing: 0.04em;
-  padding: 7px 15px;
-  max-width: 400px;
-  opacity: 1 !important;
-  transition: none;
-  z-index: 99999; /* necessary to show up on top of rc drawer */
-}
 
 /* custom scrollbar */
-.chat-message-container > div:last-child {
+.chata-drawer .chat-message-container > div:last-child {
   opacity: 0;
   transition: opacity 200ms ease;
 }
-.chat-message-container:hover > div:last-child {
+.chata-drawer .chat-message-container:hover > div:last-child {
   opacity: 1;
 }
 
 /* rc-drawer */
-.drawer-content {
+.chata-drawer .drawer-content {
   background: white;
 }
-.drawer-handle {
+.chata-drawer .drawer-handle {
   top: 72px;
   background: var(--chata-drawer-background-color);
   transition: opacity 0.5s ease;
   overflow: hidden;
 }
-.drawer-handle.hide {
+.chata-drawer .drawer-handle.hide {
   opacity: 0;
   visibility: hidden;
 }
-.drawer-handle-icon,
-.drawer-handle-icon::before,
-.drawer-handle-icon::after {
+.chata-drawer .drawer-handle-icon,
+.chata-drawer .drawer-handle-icon::before,
+.chata-drawer .drawer-handle-icon::after {
   background: var(--chata-drawer-text-color-primary);
 }
-.drawer-bottom .drawer-content-wrapper,
-.drawer-top .drawer-content-wrapper {
+.chata-drawer .drawer-bottom .drawer-content-wrapper,
+.chata-drawer .drawer-top .drawer-content-wrapper {
   left: 0;
 }
-.drawer-content-wrapper {
+.chata-drawer .drawer-content-wrapper {
   max-height: 100vh !important;
   max-width: 100vw !important;
 }
 
-.response-loading-container {
+.chata-drawer .response-loading-container {
   position: absolute;
   bottom: 45px;
   left: 20px;
@@ -192,6 +172,26 @@
 }
 .chata-drawer .chata-input::placeholder {
   color: var(--chata-drawer-text-color-placeholder);
+}
+
+/* Tooltips */
+.chata-drawer-tooltip {
+  font-family: var(--chata-drawer-font-family), sans-serif;
+  letter-spacing: 0.04em;
+  padding: 7px 15px;
+  transition: none;
+  opacity: 1 !important;
+  z-index: 99999; /* necessary to show up on top of rc drawer */
+}
+.interpretation-tooltip {
+  font-family: var(--chata-drawer-font-family), sans-serif;
+  text-align: left;
+  letter-spacing: 0.04em;
+  padding: 7px 15px;
+  max-width: 400px;
+  opacity: 1 !important;
+  transition: none;
+  z-index: 99999; /* necessary to show up on top of rc drawer */
 }
 
 /* Safetynet styles */
