--- a/src/components/ChataTable/ChataTable.css
+++ b/src/components/ChataTable/ChataTable.css
@@ -105,17 +105,11 @@
 /* These are necessary because we are always rendering the
 filter (just display: none when not used) instead of re-rendering
 the whole table when the filter button is clicked */
-.chata-table-container.filtering .chata-table .tabulator-header-filter {
-  display: inline-block;
-}
 .chata-table-container:not(.filtering) .chata-table .tabulator-header-filter {
   display: none;
 }
 .chata-table-container:not(.filtering) .chata-table .tabulator-col {
-  height: 37px !important;
-}
-.chata-table-container.filtering .chata-table .tabulator-col {
-  height: 72px !important;
+  height: auto !important;
 }
 
 .filter-tag {
