--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -124,6 +124,7 @@
 /* rc-drawer */
 .chata-drawer .drawer-content {
   background: white;
+  border-radius: 4px;
 }
 .chata-drawer .drawer-handle {
   background: var(--chata-drawer-background-color);
@@ -146,6 +147,7 @@
 .chata-drawer .drawer-content-wrapper {
   max-height: 100vh !important;
   max-width: 100vw !important;
+  background: transparent;
 }
 
 .chata-drawer .response-loading-container {
