--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -172,9 +172,15 @@
   left: 0;
 }
 .chata-drawer .drawer-content-wrapper {
-  max-height: 100vh !important;
-  max-width: 100vw !important;
   background: transparent;
+}
+.chata-drawer.drawer-right .drawer-content-wrapper,
+.chata-drawer.drawer-left .drawer-content-wrapper {
+  max-width: calc(100vw - 55px) !important;
+}
+.chata-drawer.drawer-top .drawer-content-wrapper,
+.chata-drawer.drawer-bottom .drawer-content-wrapper {
+  max-height: calc(100vh - 55px) !important;
 }
 
 .chata-drawer .response-loading-container {
@@ -438,7 +444,16 @@
 
 .query-tips-page-container {
   height: 100%;
+  padding: 10px;
+}
+.query-tips-result-container {
   padding: 20px;
+  text-align: center;
+  margin-top: 50px;
+  opacity: 0.6;
+}
+.query-tips-result-container p {
+  animation: fadeIn 0.5s;
 }
 
 /* animations */
@@ -476,11 +491,17 @@
 }
 @keyframes fadeIn {
   0% {
-    /* transform: perspective(800px) translateY(400px); */
     opacity: 0;
   }
   100% {
-    /* transform: perspective(800px) translateY(0); */
     opacity: 1;
+  }
+}
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
   }
 }
