--- a/src/components/ChatDrawer/ChatDrawer.css
+++ b/src/components/ChatDrawer/ChatDrawer.css
@@ -297,23 +297,23 @@
 }
 .page-switcher-shadow-container.right {
   top: 80px;
-  left: -70px;
-  width: 70px;
+  left: -60px;
+  width: 60px;
 }
 .page-switcher-shadow-container.left {
   top: 80px;
-  right: -70px;
-  width: 70px;
+  right: -60px;
+  width: 60px;
 }
 .page-switcher-shadow-container.top {
   left: calc(50% - 85px);
-  bottom: -70px;
-  height: 70px;
+  bottom: -60px;
+  height: 60px;
 }
 .page-switcher-shadow-container.bottom {
   left: calc(50% - 85px);
-  top: -70px;
-  height: 70px;
+  top: -60px;
+  height: 60px;
 }
 
 /* Container holding the tabs */
@@ -358,18 +358,26 @@
     margin-right, margin-top, margin-left, margin-bottom;
   transition-duration: 0.2s;
 }
-.page-switcher-container.right .tab,
-.page-switcher-container.left .tab {
+.page-switcher-container.right .tab {
+  text-align: left;
+  padding-left: 10px;
   height: 65px;
-  width: 55px;
+  width: 45px;
+  line-height: 52px;
+}
+.page-switcher-container.left .tab {
+  text-align: left;
+  padding-left: 13px;
+  height: 65px;
+  width: 45px;
   line-height: 52px;
 }
 .page-switcher-container.top .tab,
 .page-switcher-container.bottom .tab {
   padding-top: 4px;
-  height: 55px;
+  height: 45px;
   width: 65px;
-  line-height: 55px;
+  line-height: 45px;
 }
 .page-switcher-container.top .tab {
   vertical-align: top;
@@ -394,34 +402,34 @@
   /* position: absolute; */
 }
 .page-switcher-container.right .tab:hover {
-  height: 71px;
-  width: 56px;
-  line-height: 58px;
-  transform: translate(-3px, -3px);
-  margin-bottom: -3px;
+  height: 69px;
+  width: 49px;
+  line-height: 56px;
+  transform: translate(-2px, -2px);
+  margin-bottom: -2px;
 }
 .page-switcher-container.left .tab:hover {
-  height: 71px;
-  width: 56px;
-  line-height: 58px;
-  transform: translate(3px, -3px);
-  margin-bottom: -3px;
+  height: 69px;
+  width: 47px;
+  line-height: 56px;
+  transform: translate(0px, -2px);
+  margin-bottom: -2px;
 }
 .page-switcher-container.top .tab:hover {
-  height: 61px;
+  height: 49px;
   width: 71px;
-  line-height: 61px;
-  transform: translate(-3px, -3px);
-  margin-right: -3px;
-  margin-bottom: -3px;
+  line-height: 49px;
+  transform: translate(-2px, -2px);
+  margin-right: -2px;
+  margin-bottom: -2px;
 }
 .page-switcher-container.bottom .tab:hover {
-  height: 61px;
+  height: 51px;
   width: 71px;
-  line-height: 55px;
-  transform: translate(-3px, -3px);
-  margin-right: -3px;
-  margin-top: -3px;
+  line-height: 45px;
+  transform: translate(-2px, -2px);
+  margin-right: -2px;
+  margin-top: -2px;
 }
 
 /* Curve appropriate corners depending on placement */
@@ -447,6 +455,7 @@
   padding: 10px;
 }
 .query-tips-result-container {
+  color: var(--chata-drawer-text-color-primary);
   padding: 20px;
   text-align: center;
   margin-top: 50px;
