add modal component

--- a/examples/cra/src/index.css
+++ b/examples/cra/src/index.css
@@ -32,3 +32,7 @@
 .ui-overlay.qbo-demo {
   background-image: url("./qbo_demo_ui.png");
 }
+
+.ui-overlay.sage-demo {
+  background-image: url("./sage_ui.png");
+}
