--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: flex-start;
   margin-left: 20px;
+  /* transition: all 0.5s ease; */
   /* max-height: 85%; */
 
   animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
