automatically change overlays and handle images/accent colors based on current integrator

--- a/examples/cra/src/index.css
+++ b/examples/cra/src/index.css
@@ -33,6 +33,6 @@
   background-image: url("./qbo_demo_ui.png");
 }
 
-.ui-overlay.sage-demo {
+/* .ui-overlay.sage-demo {
   background-image: url("./sage_ui.png");
-}
+} */
