--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,10 +1,17 @@
 .chata-modal-container {
-  width: 100vw;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.25);
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 9999;
   /* transition: opacity 0.2s ease 0s !important; */
+  /* backface-visibility: hidden; */
   transition: none !important;
+  /* overflow: hidden; */
 }
 
 .chata-modal {
@@ -17,42 +24,43 @@
 
   margin: 100px auto;
   width: 500px;
-  height: 500px;
+  height: calc(100vh - 90px);
   max-width: 90vw;
+  max-height: calc(100vh - 90px);
 
-  animation: createBox 0.2s cubic-bezier(0.19, 1, 0.22, 1);
+  animation: createBox 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   /* the animation below is bouncy */
   /* animation: createBox 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
 
 .chata-modal-header {
   position: relative;
-  flex: 0 0 60px;
+  text-align: center;
+  flex: 0 0 52px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  padding: 18px 25px;
+  padding: 14px 60px;
   font-size: 16px;
 }
 .chata-modal-footer {
   position: relative;
-  flex: 0 0 55px;
+  flex: 0 0 52px;
   border-top: 1px solid rgba(0, 0, 0, 0.05);
   text-align: right;
   padding: 8px 10px;
 }
-.chata-modal-footer .chata-confirm-btn {
-  padding: 8px 18px;
-  margin: 5px;
-}
 
 .chata-modal-body {
+  display: flex;
+  flex-direction: column;
+
   padding: 25px;
-  flex-grow: 1;
-  flex-shrink: 1;
+  flex: 1;
+  overflow: hidden;
 }
 
 .chata-modal-close-btn {
   position: absolute;
-  top: 18px;
+  top: 16px;
   right: 18px;
   font-size: 22px;
   opacity: 0.6;
