--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -7,6 +7,11 @@
   display: inline-block;
 }
 
+.chata-btn.disabled {
+  opacity: 0.7;
+  pointer-events: none;
+}
+
 .chata-btn.default {
   color: inherit;
   border: 1px solid #a7a7a7;
