add table copy success message to tooltip

--- a/src/components/ChataTable/ChataTable.css
+++ b/src/components/ChataTable/ChataTable.css
@@ -132,7 +132,7 @@ the whole table when the filter button is clicked */
   line-height: 21px;
 }
 .comparison-value-positive {
-  color: #00cc00;
+  color: #2ecc40;
 }
 .comparison-value-negative {
   color: #e80000;
