dashboard title color prop

--- a/src/components/Dashboard/DashboardTile.css
+++ b/src/components/Dashboard/DashboardTile.css
@@ -88,7 +88,7 @@
 }
 
 .dashboard-tile-title-container .dashboard-tile-title {
-  color: #356f90;
+  /* color: #2466ae; */
   font-weight: bold;
   font-size: 17px;
 }
