change all css to scss

--- a/src/components/Dashboard/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile.scss
@@ -161,7 +161,7 @@
 .dashboard-tile-input-container .dashboard-tile-input {
   width: 0;
   padding: 12px;
-  border: 1px solid rgb(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   outline: none !important;
   color: #356f90;
 
