--- a/src/components/ChatDrawer/ChatDrawer.scss
+++ b/src/components/ChatDrawer/ChatDrawer.scss
@@ -144,7 +144,7 @@
   overflow: hidden;
   width: 50px;
   height: 50px;
-  border-radius: 50px;
+  border-radius: 50px !important;
 }
 .chata-drawer.drawer-right .drawer-handle {
   left: -60px;
