remove play button from query tip list fix button component

--- a/src/components/QueryTipsTab/QueryTipsTab.scss
+++ b/src/components/QueryTipsTab/QueryTipsTab.scss
@@ -24,8 +24,7 @@
 
   .query-tip-item {
     position: relative;
-    height: 45px;
-    line-height: 45px;
+    padding: 13px;
     border-top: 1px solid rgba(0, 0, 0, 0.08);
     cursor: pointer;
 
