--- a/src/components/QueryTipsTab/QueryTipsTab.scss
+++ b/src/components/QueryTipsTab/QueryTipsTab.scss
@@ -21,7 +21,7 @@
   .query-tip-item {
     position: relative;
     padding: 13px;
-    border-top: 1px solid rgba(0, 0, 0, 0.08);
+    border-top: 1px solid rgba(0, 0, 0, 0.04);
     cursor: pointer;
 
     &:first-child {
@@ -39,6 +39,7 @@
 
     &:hover {
       font-weight: bold;
+      color: var(--chata-drawer-accent-color);
       .execute-btn {
         visibility: visible;
         opacity: 1;
@@ -62,7 +63,7 @@
   position: relative;
   background: transparent;
   padding: 8px;
-  box-shadow: 0px 16px 16px -17px var(--chata-drawer-accent-color);
+  // box-shadow: 0px 12px 12px -17px var(--chata-drawer-accent-color);
 
   ul {
     display: inline-block;
